src/test/ui/bad/bad-expr-path.stderr
error[E0425]: cannot find function `log` in this scope
  --> $DIR/bad-expr-path.rs:4:5
   |
LL |     log(debug, m1::arguments);
   |     ^^^ not found in this scope

error[E0425]: cannot find value `debug` in this scope
  --> $DIR/bad-expr-path.rs:4:9
   |
LL |     log(debug, m1::arguments);
   |         ^^^^^ not found in this scope

error[E0425]: cannot find value `arguments` in module `m1`
  --> $DIR/bad-expr-path.rs:4:20
   |
LL |     log(debug, m1::arguments);
   |                    ^^^^^^^^^ not found in `m1`

error[E0580]: main function has wrong type
  --> $DIR/bad-expr-path.rs:3:1
   |
LL | fn main(arguments: Vec<String>) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ incorrect number of function parameters
   |
   = note: expected type `fn()`
              found type `fn(std::vec::Vec<std::string::String>)`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0425, E0580.
For more information about an error, try `rustc --explain E0425`.
